--- a/templates/questionAnswer.html
+++ b/templates/questionAnswer.html
@@ -9,15 +9,13 @@
         <title>大学生就业</title>
     </head>
     <body>
-        <h1>问答系统</h1>
         <div class="navigation">
             <ul class="nav">
                 <li><a href="http://127.0.0.1:8000/">首页</a></li>
                 <li><a href="http://127.0.0.1:8000/classification/">分析</a></li>
-                <li class="last"><a href="http://127.0.0.1:8000/questionAnswer/">问答</a></li>
+                <li class="active"><a href="http://127.0.0.1:8000/questionAnswer/">问答</a></li>
             </ul>
         </div>
-        <div class="clear"></div>
         <div class="container">
             <div class="content">
                 <div class="item item-left">
