--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,36 +1,66 @@
 body{
-    color: #000;
-    background: rgb(200, 231, 250);
+    color: #000000;
+    background:whitesmoke;
+    background-image: url("../images/svg.png");
+    background-repeat: no-repeat;
     padding: 0 5em;
     margin: 0;
 }
 h1{
     padding: 2em 1em;
-    background: rgb(0, 100, 170);
+    background: rgb(73, 179, 255);
+    color: #fff;
 }
 p{
     margin: 1em 0;
 }
-
+.transbox{
+    margin: 0px;
+    background-color: #fff;
+    border: 1px solid black;
+    opacity: 0.9;
+}
 ul{
     list-style: none;
-    margin: 0px;
+    margin-bottom: 10px;
     padding: 0px;
-    width: auto;
+    overflow: hidden;
+    background-color: #f2f3f7;
 }
-ul li{
-    float: right;
-    margin-top: 10px;
-    padding: 10px;
-    border-style: solid;
-    border: 1px solid;
+li{
+    float: left;
+    width: 100px;
+}
+li a{
+    display: block;
+    text-align: center;
+    padding: 14px 16px;
+    color: #000;
+    text-decoration: none;
+    margin: 0 3px;
+}
+.active{
+    background-color: #adadad;
+    color: white;
+}
+li a:hover:not(.active){
+    background-color: #555;
+    color: white;
+}
+ul.pagination li a{
+    transition: background-color .3s;
+
+}
+th{
+    padding: 25px;
 }
 .question{
     width: 200px;
 }
 .container{
     width: calc(50% - 40px) ;
-    margin: auto
+    padding-top: 50px;
+    margin: auto;
 }
 .content{
     width: calc(100% - 40px);
@@ -38,7 +68,19 @@ ul li{
     padding: 20px;
     overflow-y: scroll;
     flex: 1;
-    background-color: antiquewhite;
+    background-color: rgb(215, 235, 250);
+    box-shadow:
+    12.9px 8.5px 2.6px rgba(0, 0, 0, 0.017),
+    24.6px 16.3px 5.5px rgba(0, 0, 0, 0.024),
+    35.7px 23.6px 8.8px rgba(0, 0, 0, 0.029),
+    46.8px 31px 12.7px rgba(0, 0, 0, 0.033),
+    58.6px 38.8px 17.4px rgba(0, 0, 0, 0.037),
+    72.1px 47.8px 23.6px rgba(0, 0, 0, 0.042),
+    89px 58.9px 32.1px rgba(0, 0, 0, 0.047),
+    112px 74.2px 45px rgba(0, 0, 0, 0.053),
+    147.9px 97.9px 67.6px rgba(0, 0, 0, 0.062),
+    228px 151px 119px rgba(0, 0, 0, 0.08);
+    border-top-left-radius: 25px;
 }
 .content:hover::-webkit-scrollbar-thumb{
     background:rgba(0,0,0,0.1);
@@ -107,7 +149,7 @@ ul li{
 }
 .input-area{
     border-top:0.5px solid #e0e0e0;
-    height: 130px;
+    height: 150px;
     display: flex;
     flex-flow: column;
     background-color: #fff;
@@ -125,7 +167,7 @@ textarea{
 }
 .button-area{
     display: flex;
-    height: 20px;
+    height: 30px;
     margin-right: 10px;
     line-height: 40px;
     padding: 5px;
@@ -139,6 +181,9 @@ textarea{
     border-radius: 4px;
     float: right;
     cursor: pointer;
+}
+.button-area button:hover{
+    background-color: #adadad;
 }
 .avatar-bot{
     background-image: url("../images/bot.jpeg");
