--- a/templates/classification.html
+++ b/templates/classification.html
@@ -7,14 +7,14 @@
     <title>大学生就业</title>
   </head>
   <body>
-    <h1>数据分类结果</h1>
     <div class="navigation">
-        <ul class="nav">
-            <li><a href="http://127.0.0.1:8000/">首页</a></li>
-            <li><a href="http://127.0.0.1:8000/classification/">分析</a></li>
-            <li class="last"><a href="http://127.0.0.1:8000/questionAnswer/">问答</a></li>
-        </ul>
-    </div>
+      <ul class="nav">
+          <li><a href="http://127.0.0.1:8000/">首页</a></li>
+          <li class="active"><a href="http://127.0.0.1:8000/classification/">分析</a></li>
+          <li class="last"><a href="http://127.0.0.1:8000/questionAnswer/">问答</a></li>
+      </ul>
+  </div>
+    <h1>数据分类结果</h1>
     <img>
 <p>KNN的预测准确率为:</p>
     <h1>数据聚类结果</h1>
