--- a/templates/questionAnswer.html
+++ b/templates/questionAnswer.html
@@ -9,11 +9,11 @@
         <title>大学生就业</title>
     </head>
     <body>
-        <div class="navigation">
+        <div class="header">
             <ul class="nav">
                 <li><a href="http://127.0.0.1:8000/">首页</a></li>
                 <li><a href="http://127.0.0.1:8000/classification/">分析</a></li>
-                <li class="active"><a href="http://127.0.0.1:8000/questionAnswer/">问答</a></li>
+                <li class="last"><a class="active" href="http://127.0.0.1:8000/questionAnswer/">问答</a></li>
             </ul>
         </div>
         <div class="container">
