--- a/templates/classification.html
+++ b/templates/classification.html
@@ -7,12 +7,14 @@
     <title>大学生就业</title>
   </head>
   <body>
-    <div class="navigation">
-      <ul class="nav">
-          <li><a href="http://127.0.0.1:8000/">首页</a></li>
-          <li class="active"><a href="http://127.0.0.1:8000/classification/">分析</a></li>
-          <li class="last"><a href="http://127.0.0.1:8000/questionAnswer/">问答</a></li>
-      </ul>
+    <div >
+      <div class="header">
+        <ul class="nav">
+            <li><a href="http://127.0.0.1:8000/">首页</a></li>
+            <li><a class="active" href="http://127.0.0.1:8000/classification/">分析</a></li>
+            <li class="last"><a href="http://127.0.0.1:8000/questionAnswer/">问答</a></li>
+        </ul>
+    </div>
   </div>
     <h1>数据分类结果</h1>
     <img>
