--- a/templates/homePage.html
+++ b/templates/homePage.html
@@ -8,16 +8,16 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <title>大学生就业</title>
     </head>
-  <body>
-    <div class="navigation">
-        <ul class="nav">
-            <li class="active"><a href="http://127.0.0.1:8000/">首页</a></li>
-            <li><a href="http://127.0.0.1:8000/classification/">分析</a></li>
-            <li class="last"><a href="http://127.0.0.1:8000/questionAnswer/">问答</a></li>
-        </ul>
-    </div>
-    <div class="transbox">
-        <div>
+    <body>
+    <div>
+        <div class="header">
+            <ul class="nav">
+                <li><a class="active" href="http://127.0.0.1:8000/">首页</a></li>
+                <li><a href="http://127.0.0.1:8000/classification/">分析</a></li>
+                <li class="last"><a href="http://127.0.0.1:8000/questionAnswer/">问答</a></li>
+            </ul>
+        </div>
+        <div class="transbox">
             <table id="moview-result-list-table" border="1" cellspacing="1" cellpadding="1" >
                 <tr>
                     <th class="question" >问题</th>
@@ -31,6 +31,8 @@
                 {% endfor %}
     
             </table>
+        </div>
+        <div>
             <ul class="pagination">
                 {% if page_object.has_previous %}
                     <li>
