修改项目框架

--- a/templates/homePage.html
+++ b/templates/homePage.html
@@ -2,7 +2,7 @@
 <html language="zh-cn">
     <head>
         {% load static %}
-        <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css" />
+        <link href="{% static 'css/home.css' %}" rel="stylesheet" type="text/css" />
         <script src="https://code.jquery.com/jquery-3.6.4.min.js" type="text/javascript"></script>
         <script src="{% static 'js/mysearch.js' %}"></script>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -10,13 +10,12 @@
     </head>
     <body>
     <div>
-        <div class="header">
-            <ul class="nav">
-                <li><a class="active" href="http://127.0.0.1:8000/">首页</a></li>
-                <li><a href="http://127.0.0.1:8000/classification/">分析</a></li>
-                <li class="last"><a href="http://127.0.0.1:8000/questionAnswer/">问答</a></li>
-            </ul>
-        </div>
+        <ul class="nav">
+            <li><a class="active" href="http://127.0.0.1:8000/">首页</a></li>
+            <li><a href="http://127.0.0.1:8000/classification/">聚类</a></li>
+            <li><a href="http://127.0.0.1:8000/sentiment/">情感分析</a></li>
+            <li class="last"><a href="http://127.0.0.1:8000/questionAnswer/">问答</a></li>
+        </ul>
         <div class="transbox">
             <table id="moview-result-list-table" border="1" cellspacing="1" cellpadding="1" >
                 <tr>
