--- a/templates/questionAnswer.html
+++ b/templates/questionAnswer.html
@@ -2,7 +2,7 @@
 <html language="zh-cn">
     <head>
         {% load static %}
-        <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css" />
+        <link href="{% static 'css/question.css' %}" rel="stylesheet" type="text/css" />
         <script src="https://code.jquery.com/jquery-3.6.4.min.js" type="text/javascript"></script>
         <script src="{% static 'js/mysearch.js' %}"></script>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -12,7 +12,8 @@
         <div class="header">
             <ul class="nav">
                 <li><a href="http://127.0.0.1:8000/">首页</a></li>
-                <li><a href="http://127.0.0.1:8000/classification/">分析</a></li>
+                <li><a href="http://127.0.0.1:8000/classification/">聚类</a></li>
+                <li><a href="http://127.0.0.1:8000/sentiment/">情感分析</a></li>
                 <li class="last"><a class="active" href="http://127.0.0.1:8000/questionAnswer/">问答</a></li>
             </ul>
         </div>
