--- a/templates/questionAnswer.html
+++ b/templates/questionAnswer.html
@@ -4,7 +4,7 @@
         {% load static %}
         <link href="{% static 'css/question.css' %}" rel="stylesheet" type="text/css" />
         <script src="https://code.jquery.com/jquery-3.6.4.min.js" type="text/javascript"></script>
-        <script src="{% static 'js/mysearch.js' %}"></script>
+        <script src="{% static 'js/question.js' %}"></script>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <title>大学生就业</title>
     </head>
