--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,19 +1,14 @@
 body{
     color: #000000;
-    background:rgb(189, 224, 253);
-    background-image: url("../images/svg.png");
     background-repeat: no-repeat;
     padding: 0 0em;
     margin: 0;
-}
-p{
-    margin: 1em 0;
 }
 .header{
     width: 100%;
     height: 100%;
 }
-.transbox{
+/* .transbox{
     margin: 10px;
     width: 80%;
     background-color: #fff;
@@ -44,16 +39,8 @@ li{
     width: 100px;
     margin-right:50px ;
 
-}
-li a{
-    display: block;
-    text-align: center;
-    padding: 15px 18px;
-    color: #000;
-    text-decoration: none;
-    
-}
-.active{
+} */
+/* .active{
     background-color: #ffffff;
 }
 li a:hover:not(.active){
@@ -67,9 +54,9 @@ ul.pagination{
 }
 ul.pagination li a{
     transition: background-color .3s;
-}
+} */
 
-td{
+/* td{
     padding: 15px;
 }
 th{
@@ -77,10 +64,389 @@ th{
     padding-bottom: 30px;
     background-color: rgb(68, 143, 189);
 }
-/* tr:nth-child(odd) {
-    background: #a2ccda;
-} */
 
 .question{
     width: 250px;
+} */
+
+@keyframes animate {
+    0%{
+        transform: translateY(0) rotate(0deg);
+        opacity: 1;
+        border-radius: 0;
+    }
+    100%{
+        transform: translateY(-1000px) rotate(720deg);
+        opacity: 0;
+        border-radius: 50%;
+    }
+}
+
+.background {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    margin: 0;
+    padding: 0;
+    background: #858bff;
+    overflow: hidden;
+    z-index: -1;
+}
+.background li {
+    position: absolute;
+    display: block;
+    list-style: none;
+    width: 20px;
+    height: 20px;
+    background: rgba(255, 255, 255, 0.2);
+    animation: animate 14s linear infinite;
+}
+
+.background li:nth-child(0) {
+    left: 76%;
+    width: 69px;
+    height: 69px;
+    bottom: -69px;
+    animation-delay: 1s;
+}
+.background li:nth-child(1) {
+    left: 54%;
+    width: 88px;
+    height: 88px;
+    bottom: -88px;
+    animation-delay: 5s;
+}
+.background li:nth-child(2) {
+    left: 87%;
+    width: 208px;
+    height: 208px;
+    bottom: -208px;
+    animation-delay: 1s;
+}
+.background li:nth-child(3) {
+    left: 82%;
+    width: 196px;
+    height: 196px;
+    bottom: -196px;
+    animation-delay: 9s;
+}
+.background li:nth-child(4) {
+    left: 80%;
+    width: 160px;
+    height: 160px;
+    bottom: -160px;
+    animation-delay: 4s;
+}
+.background li:nth-child(5) {
+    left: 60%;
+    width: 190px;
+    height: 190px;
+    bottom: -190px;
+    animation-delay: 18s;
+}
+.background li:nth-child(6) {
+    left: 43%;
+    width: 119px;
+    height: 119px;
+    bottom: -119px;
+    animation-delay: 16s;
+}
+.background li:nth-child(7) {
+    left: 64%;
+    width: 144px;
+    height: 144px;
+    bottom: -144px;
+    animation-delay: 4s;
+}
+.background li:nth-child(8) {
+    left: 88%;
+    width: 185px;
+    height: 185px;
+    bottom: -185px;
+    animation-delay: 14s;
+}
+.background li:nth-child(9) {
+    left: 21%;
+    width: 72px;
+    height: 72px;
+    bottom: -72px;
+    animation-delay: 39s;
+}
+.background li:nth-child(10) {
+    left: 54%;
+    width: 146px;
+    height: 146px;
+    bottom: -146px;
+    animation-delay: 14s;
+}
+.background li:nth-child(11) {
+    left: 80%;
+    width: 66px;
+    height: 66px;
+    bottom: -66px;
+    animation-delay: 8s;
+}
+.background li:nth-child(12) {
+    left: 25%;
+    width: 192px;
+    height: 192px;
+    bottom: -192px;
+    animation-delay: 32s;
+}
+.background li:nth-child(13) {
+    left: 7%;
+    width: 134px;
+    height: 134px;
+    bottom: -134px;
+    animation-delay: 39s;
+}
+.background li:nth-child(14) {
+    left: 30%;
+    width: 184px;
+    height: 184px;
+    bottom: -184px;
+    animation-delay: 23s;
+}
+.background li:nth-child(15) {
+    left: 11%;
+    width: 95px;
+    height: 95px;
+    bottom: -95px;
+    animation-delay: 56s;
+}
+.background li:nth-child(16) {
+    left: 85%;
+    width: 135px;
+    height: 135px;
+    bottom: -135px;
+    animation-delay: 16s;
+}
+.background li:nth-child(17) {
+    left: 2%;
+    width: 113px;
+    height: 113px;
+    bottom: -113px;
+    animation-delay: 30s;
+}
+.background li:nth-child(18) {
+    left: 70%;
+    width: 160px;
+    height: 160px;
+    bottom: -160px;
+    animation-delay: 32s;
+}
+.background li:nth-child(19) {
+    left: 36%;
+    width: 158px;
+    height: 158px;
+    bottom: -158px;
+    animation-delay: 5s;
+}
+.background li:nth-child(20) {
+    left: 48%;
+    width: 186px;
+    height: 186px;
+    bottom: -186px;
+    animation-delay: 51s;
+}
+.background li:nth-child(21) {
+    left: 20%;
+    width: 125px;
+    height: 125px;
+    bottom: -125px;
+    animation-delay: 43s;
+}
+.background li:nth-child(22) {
+    left: 29%;
+    width: 113px;
+    height: 113px;
+    bottom: -113px;
+    animation-delay: 36s;
+}
+.background li:nth-child(23) {
+    left: 41%;
+    width: 131px;
+    height: 131px;
+    bottom: -131px;
+    animation-delay: 3s;
+}
+.background li:nth-child(24) {
+    left: 7%;
+    width: 147px;
+    height: 147px;
+    bottom: -147px;
+    animation-delay: 71s;
+}
+.background li:nth-child(25) {
+    left: 43%;
+    width: 123px;
+    height: 123px;
+    bottom: -123px;
+    animation-delay: 47s;
+}
+.background li:nth-child(26) {
+    left: 49%;
+    width: 177px;
+    height: 177px;
+    bottom: -177px;
+    animation-delay: 43s;
+}
+.background li:nth-child(27) {
+    left: 9%;
+    width: 127px;
+    height: 127px;
+    bottom: -127px;
+    animation-delay: 5s;
+}
+.background li:nth-child(28) {
+    left: 51%;
+    width: 175px;
+    height: 175px;
+    bottom: -175px;
+    animation-delay: 1s;
+}
+
+.tran1{
+    display: block;
+    padding-top: 80px;
+    text-align: center;
+    width: 600px;
+    height: 220px;
+    color: #fff;
+    text-shadow: 1px 1px 0px rgb(194, 220, 233), 2px 2px 2px rgb(49, 166, 233),
+    3px 3px 2px rgb(31, 153, 224), 5px 5px 2px rgb(20, 120, 236);
+    font-size: 60px;
+    text-decoration: none;
+}
+
+.tran2{
+    display: block;
+    padding-top: 80px;
+    text-align: center;
+    width: 600px;
+    height: 220px;
+    color: #fff;
+    text-shadow: 1px 1px 0px rgb(194, 220, 233), 2px 2px 2px rgb(49, 166, 233),
+    3px 3px 2px rgb(31, 153, 224), 5px 5px 2px rgb(20, 120, 236);
+    font-size: 60px;
+    text-decoration: none;
+}
+
+.tran3{
+    display: block;
+    padding-top: 250px;
+    text-align: center;
+    width: 600px;
+    height: 350px;
+    color: #fff;
+    text-shadow: 1px 1px 0px rgb(194, 220, 233), 2px 2px 2px rgb(49, 166, 233),
+    3px 3px 2px rgb(31, 153, 224), 5px 5px 2px rgb(20, 120, 236);
+    font-size: 90px;
+    text-decoration: none;
+}
+
+.card{
+    margin-left: 20px;
+    margin-top: 10px;
+    display: flex;
+}
+
+.cluster{
+    margin: 60px;
+    width: 600px;
+    height: 300px;
+    background-image: linear-gradient(163deg, #00ff7713 0%, #3700ff30 100%);
+    border-radius: 20px;
+    transition: all .3s;
+    backdrop-filter: blur(6px);
+}
+   
+.card1 {
+    width: 600px;
+    height: 300px;
+    background-color: #cecefe1a;
+    border-radius:20px;
+    transition: all .2s;
+    backdrop-filter: blur(6px);
+}
+   
+.card1:hover {
+    transform: scale(0.98);
+    border-radius: 20px;
+}
+   
+.cluster:hover {
+    box-shadow: 0px 0px 30px 1px rgba(0, 255, 117, 0.30);
+}
+
+.k{
+    width: 50px;
+    height: 50px;
+}
+
+.emotional {
+    margin: 60px;
+    width: 600px;
+    height: 300px;
+    background-image: linear-gradient(163deg, #00ff7713 0%, #3700ff30 100%);
+    border-radius: 20px;
+    transition: all .3s;
+    backdrop-filter: blur(6px);
+}
+   
+.card2 {
+    width: 600px;
+    height: 300px;
+    background-color: #cecefe1a;
+    border-radius:20px;
+    transition: all .2s;
+    backdrop-filter: blur(6px);
+}
+   
+.card2:hover {
+    transform: scale(0.98);
+    border-radius: 20px;
+}
+   
+.emotional:hover {
+    box-shadow: 0px 0px 30px 1px rgba(0, 255, 117, 0.30);
+}
+
+.smile{
+    width: 50px;
+    height: 50px;
+}
+
+.question {
+    margin-top: 60px;
+    margin-left: 40px;
+    width: 600px;
+    height: 660px;
+    background-image: linear-gradient(163deg, #00ff7713 0%, #3700ff30 100%);
+    border-radius: 20px;
+    transition: all .3s;
+}
+   
+.card3 {
+    width: 600px;
+    height: 660px;
+    background-color: #cecefeb2;
+    border-radius:20px;
+    transition: all .2s;
+}
+   
+.card3:hover {
+    transform: scale(0.98);
+    border-radius: 20px;
+}
+   
+.question:hover {
+    box-shadow: 0px 0px 30px 1px rgba(0, 255, 117, 0.30);
+}
+
+.bot{
+    width: 70px;
+    height: 70px;
 }
