--- a/templates/questionAnswer.html
+++ b/templates/questionAnswer.html
@@ -9,12 +9,45 @@
         <title>大学生就业</title>
     </head>
     <body>
+        <div>
+            <ul class="background">
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+             </ul>
+        </div>
         <div class="header">
             <ul class="nav">
-                <li><a href="http://127.0.0.1:8000/">首页</a></li>
-                <li><a href="http://127.0.0.1:8000/classification/">聚类</a></li>
-                <li><a href="http://127.0.0.1:8000/sentiment/">情感分析</a></li>
-                <li class="last"><a class="active" href="http://127.0.0.1:8000/questionAnswer/">问答</a></li>
+                <button class="href"><a href="http://127.0.0.1:8000/">首页</a></li>
+                <button class="href"><a href="http://127.0.0.1:8000/classification/">聚类</a></li>
+                <button class="href"><a href="http://127.0.0.1:8000/sentiment/">情感分析</a></li>
+                <button class="href"><a class="active" href="http://127.0.0.1:8000/questionAnswer/">问答</a></li>
             </ul>
         </div>
         <div class="container">
