--- a/templates/sentiment.html
+++ b/templates/sentiment.html
@@ -2,19 +2,52 @@
 <html language="zh-cn">
   <head>
     {% load static %}
-    <link href="{% static 'css/sentiment.css' %}" rel="stylesheet" type="text/css" />
+    <link href="{% static 'css/classification.css' %}" rel="stylesheet" type="text/css" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>大学生就业</title>
   </head>
   <body>
-    <div >
+    <div>
+      <div>
+        <ul class="background">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+         </ul>
+      </div>
       <div class="header">
         <ul class="nav">
-            <li><a href="http://127.0.0.1:8000/">首页</a></li>
-            <li><a href="http://127.0.0.1:8000/classification/">聚类</a></li>
-            <li><a class="active" href="http://127.0.0.1:8000/sentiment/">情感分析</a></li>
-            <li class="last"><a href="http://127.0.0.1:8000/questionAnswer/">问答</a></li>
-        </ul>
+          <button class="href"><a href="http://127.0.0.1:8000/">首页</a></li>
+            <button class="href"><a href="http://127.0.0.1:8000/classification/">聚类</a></li>
+            <button class="href"><a class="active" href="http://127.0.0.1:8000/sentiment/">情感分析</a></li>
+            <button class="href"><a href="http://127.0.0.1:8000/questionAnswer/">问答</a></li>
+      </ul>
     </div>
   </div>
     <h1>数据分类结果</h1>
