--- a/static/css/question.css
+++ b/static/css/question.css
@@ -80,6 +80,7 @@ p{
     background-color: rgba(132, 119, 192, 0.413);
     border-top-left-radius: 25px;
     border-top-right-radius: 25px;
+    overflow-y: scroll;
     box-shadow:
     12.9px 8.5px 2.6px rgba(0, 0, 0, 0.017),
     24.6px 16.3px 5.5px rgba(0, 0, 0, 0.024),
